--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -5,11 +5,10 @@ WORKDIR /app
 COPY package.json ./
 
 RUN npm install -g npm@7.9.0
-RUN yarn install
 # RUN npm install axios
 # RUN npm install cors
-
+# RUN yarn install
 
 COPY . /app
 
-CMD ["yarn","run","start"]
+CMD ["yarn","run","build"]
