Updated docker-compose with volumes on src and public folders. Update on App.js from function to class

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
         
         ports:
             - "3000:3000"
+
+        volumes:
+            - ./src:/app/src
+            - ./public:/app/public
